# caliber

./: .gitignore  CLAUDE.md  INTEGRATIONS.md  README.md  REVIEW.md  extract_calibrate_md.py  publish.py  pyproject.toml  trust-card-claude-opus.json
caliber/: __init__.py  card.py  cli.py  commitment.py  importer.py  mcp_server.py  storage.py  tracker.py  trajectory.py
tests/: test_card.py  test_commitment.py  test_importer.py  test_mcp_server.py  test_storage.py  test_tracker.py  test_trajectory.py
